// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`classes class-controller-keep-constructor.js 1`] = `
"sap.ui.define([\\"sap/ui/core/Controller\\"], function (Controller) {
  const MyController = Controller.extend(\\"test.fixtures.classes.MyController\\", {
    constructor: function _constructor(arg) {
      console.log(\\"constructor\\");
      Controller.prototype.constructor.call(this, arg);
      this.x = 1;
    },
    other: 1,

    get getter() {
      return 1;
    }

  });
  return MyController;
});"
`;

exports[`classes class-controller-w-oninit.js 1`] = `
"sap.ui.define([\\"sap/ui/core/Controller\\"], function (Controller) {
  const MyController = Controller.extend(\\"test.fixtures.classes.MyController\\", {
    onInit: function _onInit() {
      console.log(\\"constructor\\");

      this.x = 1;

      this.y = 2;

      this.prop_func = () => true;
    },
    prop: 1,

    get getter() {
      return 1;
    }

  });
  return MyController;
});"
`;

exports[`classes class-controller-wo-oninit.js 1`] = `
"sap.ui.define([\\"sap/ui/core/Controller\\"], function (Controller) {
  const MyController = Controller.extend(\\"test.fixtures.classes.MyController\\", {
    onInit: function onInit() {
      console.log(\\"constructor\\");

      this.x = 1;

      if (typeof Controller.prototype.onInit === 'function') {
        Controller.prototype.onInit.apply(this, arguments);
      }

      this.prop_func = () => true;
    },
    prop: 1,

    get getter() {
      return 1;
    }

  });
  return MyController;
});"
`;

exports[`classes class-convert-constructor-noargs.js 1`] = `
"/* global sap */
/**
 * Test notes: Even though there is an existing sp.ui.define,
 * the class should be converted.
 */
sap.ui.define(['sap/SAPClass'], SAPClass => {
  /**
   * @name com.app.MyClass
   */
  const MyClass = SAPClass.extend('com.app.MyClass', {
    constructor: function _constructor() {
      SAPClass.prototype.constructor.call(this);
    }
  });
  return MyClass;
});"
`;

exports[`classes class-convert-constructor-spread.js 1`] = `
"/* global sap */
/**
 * Test notes: Even though there is an existing sp.ui.define,
 * the class should be converted.
 */
sap.ui.define(['sap/SAPClass'], SAPClass => {
  /**
   * @name com.app.MyClass
   */
  const MyClass = SAPClass.extend('com.app.MyClass', {
    constructor: function _constructor(...args) {
      SAPClass.prototype.constructor.apply(this, [...args]);
    }
  });
  return MyClass;
});"
`;

exports[`classes class-convert-controller-extend-static-assign.js 1`] = `
"sap.ui.define(['sap/SAPController'], function (SAPController) {
  const MyController = SAPController.extend('test.fixtures.classes.MyController', {
    metadata: meta,
    renderer: {},
    myFormatter: Formatter
  });

  const meta = {};
  const Formatter = {};
  /**
   * This tests finding the metadata after the class declaration.
   * This is how typescript compiles static props.
   */
  MyController.metadata = meta;
  MyController.renderer = {};
  MyController.myFormatter = Formatter;
  return MyController;
});"
`;

exports[`classes class-convert-controller-extend-static-prop.js 1`] = `
"sap.ui.define(['sap/SAPClass'], function (SAPController) {

  const Formatter = {};

  const MyController = SAPController.extend('test.fixtures.classes.MyController', {
    myFormatter: Formatter,
    metadata: {}
  });
  return MyController;
});"
`;

exports[`classes class-convert-dec-alias.js 1`] = `
"sap.ui.define(['sap/SAPClass'], function (SAPClass) {
  const MyClass = SAPClass.extend('x.y.Z', {});
  return MyClass;
});"
`;

exports[`classes class-convert-dec-name.js 1`] = `
"sap.ui.define(['sap/SAPClass'], function (SAPClass) {
  const MyClass = SAPClass.extend('x.y.Z', {});
  return MyClass;
});"
`;

exports[`classes class-convert-dec-namespace.js 1`] = `
"sap.ui.define(['sap/SAPClass'], function (SAPClass) {
  const MyClass = SAPClass.extend('x.y.MyClass', {});
  return MyClass;
});"
`;

exports[`classes class-convert-dec-nonui5.js 1`] = `
"sap.ui.define(['other/NotSAPClass'], function (__NotSAPClass) {
  function _interopRequireDefault(obj) {
    return obj && obj.__esModule && typeof obj.default !== \\"undefined\\" ? obj.default : obj;
  }

  const NotSAPClass = _interopRequireDefault(__NotSAPClass);

  @NONUI5
  class MyClass extends NotSAPClass {}
  return MyClass;
});"
`;

exports[`classes class-convert-file-namespace.js 1`] = `
"sap.ui.define(['sap/SAPClass'], function (SAPClass) {
  const MyClass = SAPClass.extend('test.fixtures.classes.MyClass', {});
  return MyClass;
});"
`;

exports[`classes class-convert-file-namespace-prefixed.js 1`] = `
"sap.ui.define(['sap/SAPClass'], function (SAPClass) {
  const MyClass = SAPClass.extend('prefix.test.fixtures.classes.MyClass', {});
  return MyClass;
});"
`;

exports[`classes class-convert-file-namespace-sourceroot.js 1`] = `
"sap.ui.define(['sap/SAPClass'], function (SAPClass) {
  const MyClass = SAPClass.extend('classes.MyClass', {});
  return MyClass;
});"
`;

exports[`classes class-convert-jsdoc-alias.js 1`] = `
"sap.ui.define(['sap/SAPClass'], function (SAPClass) {
  const MyClass = SAPClass.extend('x.y.Z', {});
  return MyClass;
});"
`;

exports[`classes class-convert-jsdoc-name.js 1`] = `
"sap.ui.define(['sap/SAPClass'], function (SAPClass) {
  const MyClass = SAPClass.extend('x.y.Z', {});
  return MyClass;
});"
`;

exports[`classes class-convert-jsdoc-namespace.js 1`] = `
"sap.ui.define(['sap/SAPClass'], function (SAPClass) {
  const MyClass = SAPClass.extend('x.y.MyClass', {});
  return MyClass;
});"
`;

exports[`classes class-convert-jsdoc-nonui5.js 1`] = `
"sap.ui.define(['sap/SAPClass'], function (SAPClass) {

  /**
   * @nonui5
   */
  class MyClass extends SAPClass {}
  return MyClass;
});"
`;

exports[`classes class-convert-metadata-assign.js 1`] = `
"sap.ui.define(['sap/SAPClass'], function (SAPClass) {
  const MyClass = SAPClass.extend('test.fixtures.classes.MyClass', {
    metadata: meta,
    renderer: {}
  });

  const meta = {};
  const Formatter = {};
  /**
   * This tests finding the metadata after the class declaration.
   * This is how typescript compiles static props.
   */
  MyClass.metadata = meta;
  MyClass.renderer = {};
  MyClass.myFormatter = Formatter;
  return MyClass;
});"
`;

exports[`classes class-convert-metadata-assign-nested.js 1`] = `
"
sap.ui.define(['sap/SAPClass'], SAPClass => {
  const Formatter = {};
  const meta = {};
  /**
   * @name x.y.MyClass
   */
  const MyClass = SAPClass.extend('x.y.MyClass', {
    metadata: meta,
    renderer: {}
  });

  MyClass.myFormatter = Formatter;
  MyClass.metadata = meta;
  MyClass.renderer = {};
  return MyClass;
});"
`;

exports[`classes class-convert-metadata-prop.js 1`] = `
"sap.ui.define(['sap/SAPClass'], function (SAPClass) {

  const Formatter = {};
  const mdata = {};

  const MyClass = SAPClass.extend('test.fixtures.classes.MyClass', {
    metadata: mdata,
    myFormatter: Formatter
  });
  return MyClass;
});"
`;

exports[`classes class-convert-metadata-static.js 1`] = `
"sap.ui.define(['sap/SAPClass'], function (SAPClass) {

  const Formatter = Formatter;
  const mdata = {};

  const MyClass = SAPClass.extend('test.fixtures.classes.MyClass', {
    metadata: mdata
  });
  MyClass.myFormatter = Formatter;
  return MyClass;
});"
`;

exports[`classes class-convert-no-constructor.js 1`] = `
"/* global sap */
/**
 * Test notes: Even though there is an existing sp.ui.define,
 * the class should be converted.
 */
sap.ui.define(['sap/SAPClass'], SAPClass => {
  /**
   * @name com.app.MyClass
   */
  const MyClass = SAPClass.extend('com.app.MyClass', {
    constructor: function constructor() {
      if (typeof SAPClass.prototype.constructor === 'function') {
        SAPClass.prototype.constructor.apply(this, arguments);
      }

      this.property_func = () => {
        return this.getProperty('/name');
      };
    }
  });
  return MyClass;
});"
`;

exports[`classes class-convert-options-namedonly.js 1`] = `
"/**
 * This test uses config options to only convert if there is a name provided.
 */
sap.ui.define(['other/OtherClass', 'sap/SAPClass'], (OtherClass, SAPClass) => {

  return class MyClass extends OtherClass {
    constructor() {
      super();
    }
  };

  /**
   * @name my.app.MyUI5Class
   */
  const MyUI5Class = SAPClass.extend('my.app.MyUI5Class', {
    constructor: function _constructor() {
      SAPClass.prototype.constructor.call(this);
    }
  });
  return MyUI5Class;
});"
`;

exports[`classes class-convert-options-never.js 1`] = `
"/**
 * This test uses config options to never convert.
 */
sap.ui.define(['other/OtherClass'], OtherClass => {
  return class MyClass extends OtherClass {
    constructor() {
      super();
    }
  };
});"
`;

exports[`classes class-convert-with-existing-define-defer-return.js 1`] = `
"/* global sap */
/**
 * Test notes: Even though there is an existing sp.ui.define,
 * the class should be converted.
 */
sap.ui.define(['sap/SAPClass'], SAPClass => {
  /**
   * @UI5
   * @name com.app.MyClass
   * @namespace com.app
   */
  const MyClass = SAPClass.extend('com.app.MyClass', {
    metadata: {
      thing: \\"string\\"
    },
    renderer: {},
    constructor: function _constructor(data) {
      // This incorrect shorthand gets fixed
      SAPClass.prototype.constructor.call(this, data);

      this.property_func = () => {
        return this.getProperty('/name');
      };
    }
  });

  return MyClass;
});"
`;

exports[`classes class-convert-with-existing-define-immediate-return.js 1`] = `
"/* global sap */
/**
 * Test notes: Even though there is an existing sp.ui.define,
 * the class should be converted.
 */
sap.ui.define(['sap/SAPClass'], SAPClass => {
  /**
   * @UI5
   * @name com.app.MyClass
   * @namespace com.app
   */
  const MyClass = SAPClass.extend('com.app.MyClass', {
    metadata: {
      thing: \\"string\\"
    },
    renderer: {},
    constructor: function _constructor(data) {
      // This incorrect shorthand gets fixed
      SAPClass.prototype.constructor.call(this, data);

      this.property_func = () => {
        return this.getProperty('/name');
      };
    }
  });
  return MyClass;
});"
`;

exports[`classes class-covert-nonui5-return.js 1`] = `
"/**
 * This fixture tests a nonui5 scenario inside an sap.ui.define.
 */
sap.ui.define(['sap/SAPClass'], SAPClass => {
  /**
   * @nonui5
   */
  return class MyClass extends SAPClass {};
});"
`;

exports[`classes class-extend-managed.js 1`] = `
"sap.ui.define(['sap/ui/core/SAPClass', './Relative'], function (SAPClass, __Relative) {
  function _interopRequireDefault(obj) {
    return obj && obj.__esModule && typeof obj.default !== \\"undefined\\" ? obj.default : obj;
  }

  const Relative = _interopRequireDefault(__Relative);

  const MyClass = SAPClass.extend('test.fixtures.classes.MyClass', {
    renderer: {},
    metadata: {},
    constructor: function _constructor(arg) {
      console.log(\\"constructor\\");
      SAPClass.prototype.constructor.call(this, arg);
      this.x = 1;

      this.property_arrow_function = () => 1;
    },

    get prop() {
      return 1;
    },

    set prop(val) {
      this.x = val;
    },

    shorthandMethod: function _shorthandMethod(...args) {
      SAPClass.prototype.foo.apply(this, [...args]);
      this.name = Relative.name();
    },
    shorthandConflict: function _shorthandConflict() {
      // Make sure the shorthand function doesn't a function with the same name.
      return shorthandConflict();
    },
    async_shorthand_function: async function _async_shorthand_function(arg) {
      return await 1;
    },
    property_value: 1
  });

  MyClass.static_shorthand_function = function static_shorthand_function() {
    return 1;
  };

  MyClass.static_property_value = 1;

  MyClass.static_property_arrow = () => 1;

  MyClass.static_async_shorthand_function = async function static_async_shorthand_function() {
    return await 1;
  };

  MyClass.z = function () {
    return 'hey';
  };

  function shorthandConflict() {
    return 1;
  }
  return MyClass;
});"
`;

exports[`classes class-fix-with-existing-define.js 1`] = `
"/* global sap */
/**
 * Test notes: Even though there is an existing sp.ui.define,
 * and it uses .extend() syntax, the constructor function should be fixed.
 */
sap.ui.define(['sap/SAPClass'], SAPClass => {
  const X = SAPClass.extend('X', {
    // This incorrect shorthand will get fixed
    constructor: function constructor(data) {
      SAPClass.prototype.constructor.call(this, data);
    },

    method() {
      return this.getProperty('/name');
    }
  });
  return X;
});"
`;

exports[`examples Animal.js 1`] = `
"sap.ui.define([\\"sap/ui/base/ManagedObject\\"], function (ManagedObject) {
    const Animal = ManagedObject.extend(\\"test.fixtures.examples.Animal\\", {
        metadata: {
            properties: {
                type: { type: \\"string\\" },
                nickName: { type: \\"string\\" }
            }
        },
        constructor: function _constructor(...args) {
            ManagedObject.prototype.constructor.apply(this, [...args]);
        },
        init: function _init() {
            ManagedObject.prototype.init.call(this);
        },
        callMe: function _callMe() {
            alert(\`I'm a \${this.getType()}.
        Call me \${this.getNickName()}.\`);
        }
    });
    return Animal;
});"
`;

exports[`examples Cat.js 1`] = `
"sap.ui.define([\\"./Animal\\"], function (__Animal) {
    function _interopRequireDefault(obj) {
        return obj && obj.__esModule && typeof obj.default !== \\"undefined\\" ? obj.default : obj;
    }

    const Animal = _interopRequireDefault(__Animal);

    const Cat = Animal.extend(\\"othernamespace.Cat\\", {
        init: function _init() {
            Animal.prototype.init.call(this);
            this.setType(\\"Cat\\");
        },
        callMe: function _callMe() {
            Animal.prototype.callMe.call(this);
            alert(\\"Miao~\\");
        }
    });

    Cat.createCat = function createCat(nickName) {
        const cat = new example.obj.Cat({
            nickName
        });
        return cat;
    };

    return Cat;
});"
`;

exports[`examples MyError.js 1`] = `
"sap.ui.define([], function () {
  class MyError extends Error {
    constructor(msg) {
      super(msg);
      this.name = 'MyError';
    }
  }
  return MyError;
});"
`;

exports[`examples Utils.js 1`] = `
"sap.ui.define([], function () {
  function multiply(a, b) {
    return a * b;
  }

  function add(a, b) {
    // Not a named export but gets added for sap.ui.define() interop.
    return a + b;
  }

  return {
    multiply, add
  };
});"
`;

exports[`export-collapse _extends-literal.js 1`] = `
"sap.ui.define(['x'], function (__X) {
  function _interopRequireDefault(obj) {
    return obj && obj.__esModule && typeof obj.default !== \\"undefined\\" ? obj.default : obj;
  }

  const X = _interopRequireDefault(__X);

  const one = 1;
  function two() {}
  const three = 3;

  const O2 = {
    three
  };

  return _extends({}, X, O2, {
    one,
    two
  });
});"
`;

exports[`export-collapse _extends-variable.js 1`] = `
"sap.ui.define(['x'], function (__X) {
  function _interopRequireDefault(obj) {
    return obj && obj.__esModule && typeof obj.default !== \\"undefined\\" ? obj.default : obj;
  }

  const X = _interopRequireDefault(__X);

  const one = 1;
  function two() {}
  function three() {}
  function four() {}

  const O2 = {
    three
  };

  let D;

  D = _extends({}, X, O2, {
    one,
    two
  });

  D.four = four;

  D.one = one;
  D.two = two;
  D.three = three;
  return D;
});"
`;

exports[`export-collapse add-props-obj.js 1`] = `
"sap.ui.define([], function () {
  /**
  Tests that exports can be collapsed onto to an object using a variable.
    - Named export 'one' can be ignored since it's on X and as the same literal.
    - Named export 'foo' can be ignored since it's on X and as the same literal.
    - Named export 'two' gets assigned to 'X'
    - Named export 'bar' gets assigned to 'X'
  */

  function one() {}
  function two() {}

  const X = {
    one,
    foo: one
  };

  X.two = two;
  X.bar = two;
  return X;
});"
`;

exports[`export-collapse object.assign-literal.js 1`] = `
"sap.ui.define([\\"x\\"], function (__X) {
  function _interopRequireDefault(obj) {
    return obj && obj.__esModule && typeof obj.default !== \\"undefined\\" ? obj.default : obj;
  }

  const X = _interopRequireDefault(__X);

  const one = 1;
  const two = \\"2\\";
  function foo() {}

  const anotherN = 0;
  const anotherS = \\"s\\";

  const __exports = Object.assign({}, X, {
    one: 1,
    two: \\"2\\",
    foo
  });

  __exports.anotherN = anotherN;
  __exports.anotherS = anotherS;
  return __exports;
});"
`;

exports[`export-collapse object.assign-variable.js 1`] = `
"sap.ui.define(['x'], function (__X) {
  function _interopRequireDefault(obj) {
    return obj && obj.__esModule && typeof obj.default !== \\"undefined\\" ? obj.default : obj;
  }

  const X = _interopRequireDefault(__X);

  const one = 1;
  function two() {}
  const three = 3;
  function five() {}
  function six() {}

  const anotherConst = 9;
  function otherFN() {}

  const O2 = {
    six
  };

  const Utils = Object.assign({}, X, {
    one,
    two
  }, {
    five
  }, O2 // recursion test
  );

  Utils.three = 3;

  Utils.anotherConst = anotherConst;
  Utils.otherFN = otherFN;
  return Utils;
});"
`;

exports[`export-error error-assign-var.js 1`] = `"Unsafe mixing of conflicting default and named exports. The following named exports are conflicting: (foo)."`;

exports[`export-error error-assign-var-recurs.js 1`] = `"Unsafe mixing of conflicting default and named exports. The following named exports are conflicting: (foo)."`;

exports[`export-error error-obj-method.js 1`] = `"Unsafe mixing of conflicting default and named exports. The following named exports are conflicting: (a)."`;

exports[`export-error error-obj-prop.js 1`] = `"Unsafe mixing of conflicting default and named exports. The following named exports are conflicting: (a)."`;

exports[`export-mixed export-mixed-anon-func.js 1`] = `
"sap.ui.define([], function () {
  const named = {};

  const __exports = function () {
    console.log(\\"I'm the default\\");
  };

  __exports.named = named;
  return __exports;
});"
`;

exports[`export-mixed export-mixed-arrow.js 1`] = `
"sap.ui.define([], function () {
  const two = 2;

  const __exports = () => {
    return 1;
  };

  __exports.two = two;
  return __exports;
});"
`;

exports[`export-mixed export-mixed-literal.js 1`] = `
"sap.ui.define([], function () {
  const a = 1;
  const b = 2;

  const c = 3;
  const __exports = {
    a,
    x: a
  };
  __exports.b = b;
  __exports.y = b;
  __exports.c = c;
  return __exports;
});"
`;

exports[`export-mixed export-mixed-named-func.js 1`] = `
"sap.ui.define([], function () {
  function def() {
    console.log(\\"I'm the default\\");
  }
  def.hey = 'hey';
  // TODO detect the self reference and don't extend
  const named = {};
  def.def = def;
  def.named = named;
  return def;
});"
`;

exports[`exports export-class.js 1`] = `
"sap.ui.define([], function () {
  function hello() {
    return 'hey';
  }

  class Thing {
    constructor() {
      console.log('constructor');
    }
  }

  Thing.foo = hello;
  return Thing;
});"
`;

exports[`exports export-class-extend-native.js 1`] = `
"sap.ui.define([], function () {
  class MyError extends Error {
    constructor(m) {
      super(m);
      console.log('constructor');
      this.name = 'MyError';
    }
  }
  return MyError;
});"
`;

exports[`exports export-default-anon-function.js 1`] = `
"sap.ui.define([], function () {
  let one = 1;

  let two = 2;
  return async function () {
    // Since it's anonymous, this can be safely moved to the end
    return (await one) + two;
  };
});"
`;

exports[`exports export-default-arrow-function.js 1`] = `
"sap.ui.define([], function () {
  let one = 1;

  let two = 2;
  return () => {
    return one + two;
  };
});"
`;

exports[`exports export-default-identifier.js 1`] = `
"sap.ui.define([], function () {
  const x = {};

  x.a = 1;
  return x;
});"
`;

exports[`exports export-default-named-function.js 1`] = `
"sap.ui.define([], function () {
  let one = 1;

  function add() {
    return one + two + this.x;
  }

  add.x = 3;

  let two = 2;
  return add;
});"
`;

exports[`exports export-multiple.js 1`] = `
"sap.ui.define([], function () {
  const thing1 = {};
  const thing2 = 2;
  const thingy3 = 3;

  const c = 1;
  var v = 1;
  let l = 1;
  function f() {}

  let laterLet;
  laterLet = \\"now\\";

  var laterVar;
  laterVar = \\"var\\";
  const __exports = {
    __esModule: true
  };
  __exports.thing1 = thing1;
  __exports.thing2 = thing2;
  __exports.thing3 = thingy3;
  __exports.c = c;
  __exports.v = v;
  __exports.l = l;
  __exports.f = f;
  __exports.laterLet = laterLet;
  __exports.laterVar = laterVar;
  return __exports;
});"
`;

exports[`exports export-named-as-default.js 1`] = `
"sap.ui.define([], function () {
  const one = 1;
  const __exports = {
    __esModule: true
  };
  __exports.default = one;
  return __exports;
});"
`;

exports[`exports export-named-from.js 1`] = `
"sap.ui.define(['A', 'path/having-dash'], function (__A, __path_having_dash) {
  const __exports = {
    __esModule: true
  };
  __exports.A = __A.A;
  __exports.B = __A.B;
  __exports.C = __path_having_dash.C;
  __exports.D = __path_having_dash.D;
  return __exports;
});"
`;

exports[`exports export-obj.js 1`] = `
"sap.ui.define([], function () {
  // Hello World

  function getFoo() {
    return 1;
  }

  function bar() {
    return 2;
  }

  return {
    foo: getFoo(),
    bar
  };
});"
`;

exports[`imports import-all.js 1`] = `
"sap.ui.define(['G'], function (G) {
  return G;
});"
`;

exports[`imports import-duplicate-src-1.js 1`] = `
"sap.ui.define(['X'], function (XA) {
  function _interopRequireDefault(obj) {
    return obj && obj.__esModule && typeof obj.default !== \\"undefined\\" ? obj.default : obj;
  }

  const XD = _interopRequireDefault(XA);

  const X2 = XA['X2'];
  const X3 = XA['X3'];
});"
`;

exports[`imports import-duplicate-src-2.js 1`] = `
"sap.ui.define(['X'], function (__XD) {
  function _interopRequireDefault(obj) {
    return obj && obj.__esModule && typeof obj.default !== \\"undefined\\" ? obj.default : obj;
  }

  const XD = _interopRequireDefault(__XD);

  const X2 = __XD['X2'];
  const XA = __XD;
  const X3 = __XD['X3'];
});"
`;

exports[`imports import-duplicate-src-3.js 1`] = `
"sap.ui.define(['X'], function (__XD) {
  function _interopRequireDefault(obj) {
    return obj && obj.__esModule && typeof obj.default !== \\"undefined\\" ? obj.default : obj;
  }

  const XD = _interopRequireDefault(__XD);

  const XA = __XD;
  const X2 = __XD['X2'];
  const X3 = __XD['X3'];
});"
`;

exports[`imports import-dynamic.js 1`] = `
"sap.ui.define([], function () {
  function __ui5_require_async(path) {
    return new Promise((resolve, reject) => {
      sap.ui.require([path], module => {
        if (!module) {
          return reject('No module returned from ' + path);
        } else if (module.__esModule) {
          return resolve(module);
        } else if (module.default) {
          return reject(new Error(path + \\" module includes a 'default' property but not __esModule. Cannot use as dynamic import\\"));
        } else {
          module.default = typeof module === \\"object\\" ? Object.assign({}, module) : module;
          module.__esModule = true;
          resolve(module);
        }
      });
    });
  }

  async function getItAA() {
    const SAPModule = await __ui5_require_async(\\"sap/SAPModule\\");
    return SAPModule.default;
  }

  function getItThen() {
    return __ui5_require_async(\\"my/Module\\").then(MyModule => {
      return MyModule.default;
    });
  }
});"
`;

exports[`imports import-multiple.js 1`] = `
"sap.ui.define(['./../a/b', 'path/having-dash', 'A', 'BC', 'DEF', 'G', 'HI'], function (____a_b, __path_having_dash, __A, __BC, __D, G, __H) {
  function _interopRequireDefault(obj) {
    return obj && obj.__esModule && typeof obj.default !== \\"undefined\\" ? obj.default : obj;
  }

  const A = _interopRequireDefault(__A);

  const B = __BC['B'];
  const C = __BC['C'];

  const D = _interopRequireDefault(__D);

  const E = __D['E'];
  const F = __D['F'];

  const H = _interopRequireDefault(__H);

  const I = __H;
});"
`;

exports[`libs libs-sap-imports.js 1`] = `
"sap.ui.define(['sap/SAPClass'], function (SAPClass) {
  const Levels = SAPClass['Levels'];
  const MyClass = SAPClass.extend('test.fixtures.libs.MyClass', {});
  MyClass.Levels = Levels;
  return MyClass;
});"
`;

exports[`min-wrap min-wrap-no-import.js 1`] = `
"sap.ui.define([], function () {
  const x = 1; // This should not be part of sap-ui-define

  return x;
});"
`;

exports[`min-wrap min-wrap-simple.js 1`] = `
"'use strict';

const x = 1; // This should not be part of sap-ui-define

sap.ui.define(['./foo'], function (__Foo) {
  function _interopRequireDefault(obj) {
    return obj && obj.__esModule && typeof obj.default !== \\"undefined\\" ? obj.default : obj;
  }

  const Foo = _interopRequireDefault(__Foo);

  const y = Foo(x); // This gets wrapped

  return y;
});"
`;

exports[`mixed mixed-import-export.js 1`] = `
"sap.ui.define(['1', '2', '3', '4', '5'], function (__1, __2, __3, __4, __5) {
  const __exports = {
    __esModule: true
  };

  function extendExports(exports, obj) {
    Object.keys(obj).forEach(function (key) {
      if (key === \\"default\\" || key === \\"__esModule\\") return;
      Object.defineProperty(exports, key, {
        enumerable: true,
        get: function get() {
          return obj[key];
        }
      });
    });
  }

  extendExports(__exports, __1);
  __exports.a = __2.a;
  __exports.b2 = __2.b;
  __exports.default = __3.default;
  __exports.default2 = __4.default;
  __exports.x = __5.v;
  return __exports;
});"
`;

exports[`no-wrap nowrap-existing-sap.ui.define.js 1`] = `
"/* global sap */
sap.ui.define(['JSONModel'], JSONModel => {
  return new JSONModel();
});"
`;

exports[`no-wrap skip-iffe.js 1`] = `
"(function () {
  window.x = {};
})();"
`;

exports[`presets with-preset-env.js 1`] = `
"'use strict';

sap.ui.define(['sap/class'], function (SAPClass) {
  var MyClass = SAPClass.extend('my.MyClass', {
    x: 1,
    fn: function _fn() {
      var _this = this;

      // The purpose of the setTimeout is to ensure that 'this' is correct for the super call
      // when the arrow function transform is applied (i.e. our super transform must run first)
      setTimeout(function () {
        SAPClass.prototype.fn.call(_this);
      });
    }
  });
  MyClass.X = 1;
  return MyClass;
});"
`;

exports[`wrapping export-const.js 1`] = `
"sap.ui.define([], function () {
  const X = {};

  return X;
});"
`;

exports[`wrapping export-jsdoc-global.js 1`] = `
"sap.ui.define([], function () {
  return {};
}, true);"
`;

exports[`wrapping export-literal.js 1`] = `
"sap.ui.define([], function () {
  return {};
});"
`;

exports[`wrapping export-options-global.js 1`] = `
"sap.ui.define([], function () {
  return {};
}, true);"
`;
